--- a/classify/javascript/protoType.html
+++ b/classify/javascript/protoType.html
@@ -44,4 +44,7 @@ console.log(test2.prototype); //undefined(只有构造器才有protoType属性)
 console.log(test2.__proto__); //object{ fun1:function(){} }
 
     </script>
+    <body>
+        <div>sfwfwfasfwef</div>
+    </body>
 </html>
