--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,14 @@
         <div class="content">
             <a class="item javascript" href="javascript/index.html" target="_blank">javascript</a>
             <a class="item c-lan" href="c/index.html" target="_blank">C</a>
+            <a class="item go-lan" href="go/index.html" target="_blank">GO</a>
+            <a class="item bash" href="bash/index.html" target="_blank">Bash</a>
+            <a class="item linux" href="linux/index.html" target="_blank">Linux</a>
             <a class="item" href="#" target="_blank"></a>
-            <a class="item" href="#"target="_blank"></a>
+            <a class="item" href="#" target="_blank"></a>
+            <a class="item" href="#" target="_blank"></a>
+            <a class="item" href="#" target="_blank"></a>
+            <a class="item" href="#" target="_blank"></a>
         </div>
     </body>
 </html>
