--- a/web/javascript/index.html
+++ b/web/javascript/index.html
@@ -39,13 +39,27 @@ function classifyClick(e){
     <body>
         <div class="content">
             <div class="left">
+
                 <div class="item">
-                    <div class="title" onClick="titleClick(event)">haha</div>
+                    <div class="title" onClick="titleClick(event)"></div>
                     <div class="classify">
-                        <a class="section" href="./main.c" target="content_frame" onClick="classifyClick(event)">sde</a>
+                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
                         <div class="clearfix"></div>
                     </div>
                 </div>
+
+                <div class="item">
+                    <div class="title" onClick="titleClick(event)"></div>
+                    <div class="classify">
+                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+
                 <div class="clearfix"></div>
             </div>
             <div class="right">
