--- a/web/javascript/index.html
+++ b/web/javascript/index.html
@@ -41,9 +41,9 @@ function classifyClick(e){
             <div class="left">
 
                 <div class="item">
-                    <div class="title" onClick="titleClick(event)"></div>
+                    <div class="title" onClick="titleClick(event)">String</div>
                     <div class="classify">
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="substance/regexp.js" target="content_frame" onClick="classifyClick(event)">正则表达式</a>
                         <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
                         <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
                         <div class="clearfix"></div>
