--- a/web/linux/index.html
+++ b/web/linux/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>JAVASCRIPT</title>
+        <title>LINUX</title>
         <link href="main.css" rel="stylesheet"/>
     </head>
 
@@ -41,11 +41,9 @@ function classifyClick(e){
             <div class="left">
 
                 <div class="item">
-                    <div class="title" onClick="titleClick(event)"></div>
+                    <div class="title" onClick="titleClick(event)">String</div>
                     <div class="classify">
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="substance/regexp" target="content_frame" onClick="classifyClick(event)">正则表达式</a>
                         <div class="clearfix"></div>
                     </div>
                 </div>
@@ -53,9 +51,7 @@ function classifyClick(e){
                 <div class="item">
                     <div class="title" onClick="titleClick(event)"></div>
                     <div class="classify">
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="substance/" target="content_frame" onClick="classifyClick(event)"></a>
                         <div class="clearfix"></div>
                     </div>
                 </div>
