--- a/web/javascript/index.html
+++ b/web/javascript/index.html
@@ -43,9 +43,7 @@ function classifyClick(e){
                 <div class="item">
                     <div class="title" onClick="titleClick(event)">String</div>
                     <div class="classify">
-                        <a class="section" href="substance/regexp.js" target="content_frame" onClick="classifyClick(event)">正则表达式</a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="substance/regexp" target="content_frame" onClick="classifyClick(event)">正则表达式</a>
                         <div class="clearfix"></div>
                     </div>
                 </div>
@@ -53,9 +51,7 @@ function classifyClick(e){
                 <div class="item">
                     <div class="title" onClick="titleClick(event)"></div>
                     <div class="classify">
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
-                        <a class="section" href="" target="content_frame" onClick="classifyClick(event)"></a>
+                        <a class="section" href="substance/" target="content_frame" onClick="classifyClick(event)"></a>
                         <div class="clearfix"></div>
                     </div>
                 </div>
